# EnterpriseAgentHub

./: .gitignore  AGENTS.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  启动文档.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/sqlite/migrations/: 0001_p1_local_state.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs  process.rs
apps/desktop/src-tauri/src/adapters/: config.rs  detection.rs  distribution.rs  mod.rs  transform.rs
apps/desktop/src-tauri/src/commands/: distribution.rs  local_state.rs  local_state_types.rs  project_directory.rs  tool_detection.rs
apps/desktop/src-tauri/src/store/: central_store.rs  commands.rs  hash.rs  mod.rs  models.rs  offline_queue.rs  sqlite.rs
apps/desktop/src-tauri/tests/: full_closure.rs
archive/desktop-legacy-20260418/src-tauri/: Cargo.toml  tauri.conf.json
archive/desktop-legacy-20260418/src-tauri/capabilities/: default.json
archive/desktop-legacy-20260418/src-tauri/sqlite/migrations/: 0002_local_notification_cache.sql
archive/desktop-legacy-20260418/src-tauri/src/: lib.rs  main.rs
archive/desktop-legacy-20260418/src-tauri/src/adapters/: detection.rs  distribution.rs  errors.rs  path_validation.rs
archive/desktop-legacy-20260418/src-tauri/src/commands/: distribution.rs  local_state.rs  local_state_types.rs  path_validation.rs  project_directory.rs
archive/desktop-legacy-20260418/src-tauri/src/store/: central_store.rs  commands.rs  models.rs  sqlite.rs
archive/desktop-legacy-20260418/src-tauri/tests/: full_closure.rs
deploy/: README.md  server-check.sh  (+3 more)
(+328 files in other folders)
