[package]
name = "enterprise-agent-hub-desktop"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "enterprise-agent-hub-desktop"

[lib]
name = "enterprise_agent_hub_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
