[package]
name = "enterprise-agent-hub-desktop"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "enterprise_agent_hub_desktop"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
